--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="css/style.css">
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="js/js.js"></script>
 </head>
 <body>
+<div id="header"></div>
 <h1 class="testh1">Adventure Park!</h1>
-<script src="js/js.js"></script>
+
+
 </body>
 </html>
