--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="js/js.js"></script>
+  <script src="../js/js.js"></script>
 </head>
 <body>
 <div id="header"></div>
