--- a/html/booking.html
+++ b/html/booking.html
@@ -6,12 +6,13 @@
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/booking.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
 </head>
 <body>
 <div id="content">
   <div id="header"></div>
   <!-- Øverste knapper på siden-->
-  <div id="booking-box">
+  <div id="booking-box" class="">
     <button>vælg Dag</button>
     <button>Vælg Aktivitet</button>
     <Button>Vælg antal Deltagere</Button>
@@ -23,7 +24,7 @@
   <div id="activity-box">
     <div id="activity-info">
       <h2>Paintball</h2>
-      <p></p>
+      <p>Ønsker du at finde din indre kriger frem? Så er paintball noget for dig.</p>
       <div id="image-poster"></div>
     </div>
     <!--Tider her -->
