--- a/html/booking.html
+++ b/html/booking.html
@@ -7,33 +7,92 @@
   <link rel="stylesheet" href="../css/booking.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
+
+
 </head>
 <body>
 <div id="content">
   <div id="header"></div>
   <!-- Øverste knapper på siden-->
-  <div id="booking-box" class="">
-    <button>vælg Dag</button>
-    <button>Vælg Aktivitet</button>
-    <Button>Vælg antal Deltagere</Button>
-    <button>Book Valgte</button>
+
+  <div id="booking-box">
+    <button id="pbGetTimes">Vælg Dag</button>
+    <button>Antal deltagere</button>
+
   </div>
   <!-- Øverste knapper på siden-->
 
   <!-- Aktivitets Boksene og tider-->
-  <div id="activity-box">
-    <div id="activity-info">
+  <div class="activity-box">
+    <div class="activity-info">
       <h2>Paintball</h2>
-      <p>Ønsker du at finde din indre kriger frem? Så er paintball noget for dig.</p>
-      <div id="image-poster"></div>
+      <div class="image-poster">
+        <img src="../images/Paintball2.jpg"/></div>
     </div>
     <!--Tider her -->
-    <div id="times"></div>
+    <div class="times" id="testTime"></div>
     <!--Tider her -->
   </div>
   <!-- Aktivitets Boksene og tider-->
 
+  <!-- Aktivitets Boksene og tider-->
+  <div class="activity-box">
+    <div class="activity-info">
+      <h2>Go-kart</h2>
+      <div class="image-poster">
+        <img src="../images/header_gokart-e1424087434508-1024x468.jpg" height="468" width="1024"/>
+      </div>
+    </div>
+    <!--Tider her -->
+    <div class="times"></div>
+    <!--Tider her -->
+  </div>
+  <!-- Aktivitets Boksene og tider-->
+
+  <!-- Aktivitets Boksene og tider-->
+  <div class="activity-box">
+    <div class="activity-info">
+      <h2>Sumo Wrestling</h2>
+      <div class="image-poster">
+        <img src="../images/Sumo-Wrestling_Players3_960x720.jpg" height="720" width="960"/></div>
+    </div>
+    <!--Tider her -->
+    <div class="times"></div>
+    <!--Tider her -->
+  </div>
+  <!-- Aktivitets Boksene og tider-->
+
+  <!-- Aktivitets Boksene og tider-->
+  <div class="activity-box">
+    <div class="activity-info">
+      <h2>Mini Golf</h2>
+      <div class="image-poster"><img src="../images/unnamed.png" height="512" width="512"/></div>
+    </div>
+    <!--Tider her -->
+    <div class="times"></div>
+    <!--Tider her -->
+  </div>
+  <!-- Aktivitets Boksene og tider-->
+
+  <!-- Aktivitets Boksene og tider-->
+  <div class="activity-box">
+    <div class="activity-info">
+      <h2>Bumper Ball</h2>
+      <div class="image-poster">
+        <img src="../images/1522811_249040721886379_5028558434686202985_o.jpg" height="1366" idth="2048"/>
+      </div>
+    </div>
+    <!--Tider her -->
+    <div class="times"></div>
+    <!--Tider her -->
+  </div>
+  <!-- Aktivitets Boksene og tider-->
+
+  <button id="book" >Book Valgte</button>
+
+
 </div>
+<script src="../js/booking.js"></script>
 <script src="../js/js.js"></script>
 </body>
 </html>
