--- a/html/booking.html
+++ b/html/booking.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="../css/booking.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
-
-
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+<div id="header"></div>
 <div id="content">
-  <div id="header"></div>
+
   <!-- Øverste knapper på siden-->
 
   <div id="booking-box">
