--- a/html/form.html
+++ b/html/form.html
@@ -5,78 +5,88 @@
   <title>Form</title>
   <link rel="stylesheet" href="../css/formstyle.css">
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
+  <link rel="stylesheet" href="../css/booking.css">
 
 </head>
 <body>
 <div class="container">
+  <div id="content">
 
-  <form action="action_page.php">
+    <form action="action_page.php">
 
-    <div class="form-row">
-      <div class="col-md-4 mb-3">
-        <label for="fname">Fornavn</label>
-        <input type="text" class="form-control" id="fname" placeholder="Dit fornavn.." required>
-        <div class="valid-feedback">
-          Looks good!
+      <div class="form-row">
+        <div class="col-md-4 mb-3">
+          <label for="fname">Fornavn</label>
+          <input type="text" class="form-control" id="fname" placeholder="Dit fornavn.." required>
+          <div class="invalid-feedback">
+            Looks good!
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="lname">Efternavn</label>
+          <input type="text" class="form-control" id="lname" placeholder="Dit efternavn.." required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="mail">Mail</label>
+          <input type="text" class="form-control" id="mail" placeholder="Din mail.." required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="pnum">Mobil</label>
+          <input type="text" class="form-control" id="pnum" placeholder="Mobil nummer.." required>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <label for="koment">Komentar</label>
+          <textarea id="koment" name="koment" placeholder="Skriv en kommentar.." style="height:200px"></textarea>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
         </div>
       </div>
 
-      <div class="col-md-4 mb-3">
-        <label for="lname">Efternavn</label>
-        <input type="text" class="form-control" id="lname" placeholder="Dit efternavn.." required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
 
-      <div class="col-md-4 mb-3">
-        <label for="mail">Mail</label>
-        <input type="text" class="form-control" id="mail" placeholder="Din mail.." required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
+      <!--
+          <label for="lname">Efternavn</label>
+          <input type="text" id="lname" name="lastname" placeholder="Dit efternavn..">
 
-      <div class="col-md-4 mb-3">
-        <label for="pnum">Mobil</label>
-        <input type="text" class="form-control" id="pnum" placeholder="Mobil nummer.." required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
+          <label for="mail">Mail</label>
+          <input type="text" id="mail" name="mail" placeholder="Din mail..">
 
-      <div class="col-md-4 mb-3">
-        <label for="koment">Komentar</label>
-        <textarea id="koment" name="koment" placeholder="Skriv en kommentar.." style="height:200px"></textarea>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
-    </div>
+          <label for="pnum">Mobil</label>
+          <input type="text" id="pnum" name="phonenumber" placeholder="Dit mobil nummer..">
 
-<!--
-    <label for="lname">Efternavn</label>
-    <input type="text" id="lname" name="lastname" placeholder="Dit efternavn..">
-
-    <label for="mail">Mail</label>
-    <input type="text" id="mail" name="mail" placeholder="Din mail..">
-
-    <label for="pnum">Mobil</label>
-    <input type="text" id="pnum" name="phonenumber" placeholder="Dit mobil nummer..">
-
-    <label for="address" class="col-md-4 mb-3">Mail</label>
-    <input type="text" id="address" name="address" placeholder="Din adresse..">
+          <label for="address" class="col-md-4 mb-3">Mail</label>
+          <input type="text" id="address" name="address" placeholder="Din adresse..">
 
 
-    <label for="subject">Kommentare</label>
-    <textarea id="subject" name="subject" placeholder="Skriv en kommentar.." style="height:200px"></textarea>
-    -->
+          <label for="subject">Kommentare</label>
+          <textarea id="subject" name="subject" placeholder="Skriv en kommentar.." style="height:200px"></textarea>
+          -->
 
-    <button class="btn btn-primary" type="submit">Submit</button>
-    <input type="submit" value="Submit">
+      <input type="submit" onclick="confirmation()"/>
 
+      <a href="confirmation.html">
+        <button class="btn btn-primary">Submit</button>
+      </a>
 
-  </form>
+      <a href="confirmation.html">
+        <input type="submit" value="Submit">
+      </a>
+
+    </form>
+  </div>
 </div>
 
 <script src="../bootstrap-5.1.3-dist/js/bootstrap.js"></script>
