Fundet example af calendar der virker og lavet tweaks i header

--- a/html/fragments.html
+++ b/html/fragments.html
@@ -10,8 +10,8 @@
   <div id="navbar">
     <ul>
       <li>AdventureThingLogo</li>
-      <li><a href="booking.html">Aktiviteter</a></li>
-      <li><a href="">Book nu</a></li>
+      <li><a href="">Aktiviteter</a></li>
+      <li><a href="booking.html">Book nu</a></li>
       <li><a href="">Kontakt os</a></li>
     </ul>
   </div>
