--- a/html/booking.html
+++ b/html/booking.html
@@ -8,11 +8,26 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div id="header"></div>
 <div id="content">
 
+<!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
+  <div class="col-lg-12" style="margin-top:10px;">
+    <label  class="form-group control-label col-lg-2">Tarikh Surat:<span style="color:red;">&nbsp;*</span></label>
+    <div class="input-group col-lg-6">
+      &nbsp <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+      <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date" value="" data-date-format="yyyy-mm-dd" readonly><br>
+    </div>
+  </div>
+
+  <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
   <!-- Øverste knapper på siden-->
 
   <div id="booking-box">
