index side med video + promotions

--- a/html/index.html
+++ b/html/index.html
@@ -2,15 +2,98 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Aventure Park | Velkommen </title>
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/index.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="../js/js.js"></script>
+
 </head>
 <body>
-<div id="header"></div>
-<h1 class="testh1">Adventure Park!</h1>
 
+
+<!-- fra https://alvarotrigo.com/blog/how-to-create-a-fullscreen-video-with-css-and-html/ -->
+<div class="video-container">
+  <video autoplay muted loop poster="cake.jpg">
+    <source
+      src="https://cdn.videvo.net/videvo_files/video/free/2019-07/small_watermarked/Raw_Vegan_Blueberry_Cake_Cut_Birthday_Cooking_preview.webm"
+      type="video/webm">
+  </video>
+</div>
+<!-- end of video-container-->
+
+<!-- August' header her: -->
+<div id="header" class="header"></div>
+<div id="content">
+
+
+  <!-- FIRST ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+    </div>
+    <div class="column">
+      <!-- column til højre -->
+      <h2>Polterabend?!</h2>
+      <br>
+      <p>Her står noget tekst om hvad vi tilbyder ift polterabends. Kom og skyd din brudgom. <br>
+        Priser: 20000
+        Des flere des mere sparer I!
+        <br>
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="booking.html">
+        <button class="btn-danger">Book nu</button>
+      </a>
+
+    </div>
+  </div>
+
+  <!-- måske mere mellemrum ind imellem de to sektioner? -->
+
+
+
+  <!-- SECOND ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til højre -->
+      <h2>Team building</h2>
+      <br>
+      <p>Her står noget tekst om hvad vi tilbyder ift teambuilding. Kom og skyd din chef. <br>
+        Priser: 20000
+        Des flere des mere sparer I!
+        <br>
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="booking.html">
+        <button class="btn-danger">Læs mere</button>
+      </a>
+
+    </div>
+    <div class="column">
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+    </div>
+  </div>
+
+
+</div>
+</div>
 
 </body>
 </html>
