Tilføjet noget javscript

--- a/html/booking.html
+++ b/html/booking.html
@@ -31,7 +31,7 @@
   <!-- Øverste knapper på siden-->
 
   <div id="booking-box">
-    <button id="pbGetTimes">Vælg Dag</button>
+    <button id="pbCreateTimeTable">Vælg Dag</button>
     <button>Antal deltagere</button>
 
   </div>
@@ -45,7 +45,10 @@
         <img src="../images/Paintball2.jpg"/></div>
     </div>
     <!--Tider her -->
-    <div class="times" id="testTime"></div>
+    <div class="times" id="timetable">
+
+        <button id="times"></button>
+    </div>
     <!--Tider her -->
   </div>
   <!-- Aktivitets Boksene og tider-->
