--- a/html/booking.html
+++ b/html/booking.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div id="header"></div>
+<div id="header" class="header"></div>
 <div id="content">
 
 <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
