--- a/html/form.html
+++ b/html/form.html
@@ -6,13 +6,16 @@
   <link rel="stylesheet" href="../css/formstyle.css">
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
   <link rel="stylesheet" href="../css/booking.css">
+  <link rel="stylesheet" href="../css/main.css">
+
 
 </head>
 <body>
+<div id="header" class="header"></div>
 <div class="container">
   <div id="content">
 
-    <form action="action_page.php">
+    <form method="POST" action="confirmation.html">
 
       <div class="form-row">
         <div class="col-md-4 mb-3">
@@ -75,20 +78,15 @@
           <textarea id="subject" name="subject" placeholder="Skriv en kommentar.." style="height:200px"></textarea>
           -->
 
-      <input type="submit" onclick="confirmation()"/>
+        <a href="confirmation.html">
+          <button class="btn btn-primary">Submit</button>
+        </a>
 
-      <a href="confirmation.html">
-        <button class="btn btn-primary">Submit</button>
-      </a>
-
-      <a href="confirmation.html">
-        <input type="submit" value="Submit">
-      </a>
-
+      </form>
     </form>
   </div>
 </div>
-
+<script src="../js/js.js"></script>
 <script src="../bootstrap-5.1.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
