--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -5,10 +5,26 @@
   <title>Confirmation page</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/booking.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
+
 </head>
 <body>
-<div id="content">
-<h1 class="headlineConf">Du har nu bestilt en tur i Adventure Park</h1>
+<div id="header" class="header"></div>
+
+<div class="jumbotron text-center">
+  <h1 class="display-3">Ordre Bekræftet</h1>
+  <p class="lead"><strong>Se din mail inbox</strong> for yderligere informationer omkring din bestilling.</p>
+  <hr>
+  <p>
+    Har du problemer? <a href="">Kontakt os</a>
+  </p>
+  <p class="lead">
+    <a class="btn btn-primary btn-sm" href="index.html" role="button">Tilbage til forsiden</a>
+  </p>
 </div>
+
+
+<script src="../js/js.js"></script>
 </body>
 </html>
