--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
       </p>
 
       <a href="booking.html">
-        <button class="btn-danger">Book nu</button>
+        <button class="button-50">Book nu</button>
       </a>
 
     </div>
@@ -80,7 +80,7 @@
       </p>
 
       <a href="booking.html">
-        <button class="btn-danger">Læs mere</button>
+        <button class="button-50">Læs mere</button>
       </a>
 
     </div>
