--- a/html/booking.html
+++ b/html/booking.html
@@ -18,12 +18,13 @@
 <div id="header" class="header"></div>
 <div id="content">
 
-<!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
+  <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
   <div class="col-lg-12" style="margin-top:10px;">
-    <label  class="form-group control-label col-lg-2">Tarikh Surat:<span style="color:red;">&nbsp;*</span></label>
+    <label class="form-group control-label col-lg-2">Tarikh Surat:<span style="color:red;">&nbsp;*</span></label>
     <div class="input-group col-lg-6">
       &nbsp <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-      <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date" value="" data-date-format="yyyy-mm-dd" readonly><br>
+      <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
+             value="" data-date-format="yyyy-mm-dd" readonly><br>
     </div>
   </div>
 
@@ -45,12 +46,12 @@
         <img src="../images/Paintball2.jpg"/></div>
     </div>
     <!--Tider her -->
-    <div class="times" id="timetable">
-
-        <button id="times"></button>
-    </div>
-    <!--Tider her -->
+    <table  id="timetable">
+        <th>Time</th>
+    </table>
   </div>
+  <!--Tider her -->
+
   <!-- Aktivitets Boksene og tider-->
 
   <!-- Aktivitets Boksene og tider-->
@@ -62,7 +63,9 @@
       </div>
     </div>
     <!--Tider her -->
-    <div class="times"></div>
+    <table  class="timetable">
+      <th>Time</th>
+    </table>
     <!--Tider her -->
   </div>
   <!-- Aktivitets Boksene og tider-->
@@ -106,9 +109,9 @@
   </div>
   <!-- Aktivitets Boksene og tider-->
 
-  <button id="book" >Book Valgte</button>
+  <button id="book">Book Valgte</button>
 
-
+</div>
 </div>
 <script src="../js/booking.js"></script>
 <script src="../js/js.js"></script>
