tilføjet links til de andre sider i navbar + at logo fører til index-siden

--- a/html/fragments.html
+++ b/html/fragments.html
@@ -9,10 +9,10 @@
 <div id="header">
   <div id="navbar">
     <ul>
-      <li>AdventureThingLogo</li>
-      <li><a href="">Aktiviteter</a></li>
+      <li><a href="index.html">AdventureThingLogo</a></li>
+      <li><a href="activities.html">Aktiviteter</a></li>
       <li><a href="booking.html">Book nu</a></li>
-      <li><a href="">Kontakt os</a></li>
+      <li><a href="contact.html">Kontakt os</a></li>
     </ul>
   </div>
 </div>
