--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../css/booking.css">
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
 </head>
 <body>
