--- a/html/form.html
+++ b/html/form.html
@@ -13,7 +13,6 @@
 <body>
 <div id="header" class="header"></div>
 
-
 <div class="container">
   <div id="content">
 
@@ -88,6 +87,7 @@
     </form>
   </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="../js/js.js"></script>
 <script src="../bootstrap-5.1.3-dist/js/bootstrap.js"></script>
 </body>
