--- a/html/booking.html
+++ b/html/booking.html
@@ -19,22 +19,21 @@
 <div id="content">
 
   <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
-  <div class="col-lg-12" style="margin-top:10px;">
-    <label class="form-group control-label col-lg-2">Tarikh Surat:<span style="color:red;">&nbsp;*</span></label>
-    <div class="input-group col-lg-6">
-      &nbsp <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-      <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
-             value="" data-date-format="yyyy-mm-dd" readonly><br>
-    </div>
-  </div>
+
 
   <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
   <!-- Øverste knapper på siden-->
 
   <div id="booking-box">
-    <button id="pbCreateTimeTable">Vælg Dag</button>
-    <button>Antal deltagere</button>
-
+    <!--  <button id="pbCreateTimeTable">Vælg Dag</button> -->
+    <div class="col-lg-12" style="margin-top:10px;">
+      <label class="form-group control-label col-lg-2" >vælg en dag *</label>
+      <div class="input-group col-lg-6">
+         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+        <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
+               value="" data-date-format="yyyy-mm-dd" readonly><br>
+      </div>
+    </div>
   </div>
   <!-- Øverste knapper på siden-->
 
@@ -109,7 +108,7 @@
   </div>
   <!-- Aktivitets Boksene og tider-->
 
-  <button id="book">Book Valgte</button>
+  <button id="book"><a href="form.html">Book Valgte</a></button>
 
 </div>
 </div>
