dropdown til aktiviteter

--- a/html/fragments.html
+++ b/html/fragments.html
@@ -10,7 +10,18 @@
   <div id="navbar">
     <ul>
       <li><a href="index.html">AdventureThingLogo</a></li>
-      <li><a href="activities.html">Aktiviteter</a></li>
+
+
+
+      <div class="dropdown">
+        <button class="dropbtn">Aktiviteter ▼</button>
+        <div class="dropdown-content">
+          <a href="paintball.html">Paintball</a>
+          <a href="minigolf.html">Minigolf</a>
+          <a href="#">Bumberball</a>
+        </div>
+      </div>
+
       <li><a href="booking.html">Book nu</a></li>
       <li><a href="contact.html">Kontakt os</a></li>
     </ul>
