--- a/html/minigolf.html
+++ b/html/minigolf.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Aventure Park | Aktiviteter </title>
+  <title>Aventure Park | Minigolf </title>
   <link rel="stylesheet" href="../css/index.css">
 
 
