tilføjet menuen i paintball

--- a/html/paintball.html
+++ b/html/paintball.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Aventure Park | Minigolf </title>
+  <link rel="stylesheet" href="../css/index.css">
+
+
 </head>
 <body>
 
+<div id="header" class="header"></div>
+<div id="content">
+
+
+
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="../js/js.js"></script>
 </body>
 </html>
