rettet linket i læs mere-knappen til at læse mere om paintball

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Aventure Park | Velkommen </title>
-  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/index.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="../js/js.js"></script>
@@ -77,7 +76,7 @@
         <br>
       </p>
 
-      <a href="booking.html">
+      <a href="paintball.html">
         <button class="button-50">Læs mere</button>
       </a>
 
