--- a/html/minigolf.html
+++ b/html/minigolf.html
@@ -33,9 +33,9 @@
     </div>
     <div class="column">
       <!-- column til højre -->
-      <h2>SKYD SKYD SKYD</h2>
+      <h2>Det' golf tid du</h2>
 
-      <p>Her står noget tekst om paintball<br>
+      <p>Her står noget tekst om minigolf<br>
         Her står nogle priser
         Her er noget mere info
         <br>
@@ -61,9 +61,9 @@
     <div class="column">
 
       <!-- column til højre -->
-      <h2>Team building</h2>
+      <h2>Sjov for hele familien</h2>
 
-      <p>Her står noget tekst om hvad vi tilbyder ift teambuilding. Kom og skyd din chef. <br>
+      <p>Her står noget tekst om hvad vi tilbyder ift minigolf. Vinderen får en is. <br>
         Priser: 20000
         Des flere des mere sparer I!
         <br>
