paintball-, minigolf, contact og bumperball sider oprettet. css: background color i main, dropdown tilføjet til aktivitetsmenu

--- a/html/paintball.html
+++ b/html/paintball.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Aventure Park | Minigolf </title>
+  <title>Aventure Park | Paintball </title>
   <link rel="stylesheet" href="../css/index.css">
 
 
