--- a/html/contact.html
+++ b/html/contact.html
@@ -2,9 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Aventure Park | Kontakt os </title>
+  <link rel="stylesheet" href="../css/index.css">
+
 </head>
 <body>
 
+
+<!-- August' header her: -->
+<div id="header" class="header"></div>
+<div id="content">
+
+  <!-- FIRST ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+    </div>
+    <div class="column">
+      <!-- column til højre -->
+      <h2>Polterabend?!</h2>
+
+      <p>Her står noget tekst om hvad vi tilbyder ift polterabends. Kom og skyd din brudgom. <br>
+        Priser: 20000
+        Des flere des mere sparer I!
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="booking.html">
+        <button class="button-50">Book nu</button>
+      </a>
+
+    </div>
+  </div>
+
+  <!-- måske mere mellemrum ind imellem de to sektioner? -->
+
+
+
+  <!-- SECOND ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til højre -->
+      <h2>Team building</h2>
+
+      <p>Her står noget tekst om hvad vi tilbyder ift teambuilding. Kom og skyd din chef. <br>
+        Priser: 20000
+        Des flere des mere sparer I!
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="booking.html">
+        <button class="button-50">Læs mere</button>
+      </a>
+
+    </div>
+    <div class="column">
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+
+
+
+      <!--  her skal et embedded map til lokation være -->
+
+    </div>
+  </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="../js/js.js"></script>
 </body>
 </html>
