--- a/html/fragments.html
+++ b/html/fragments.html
@@ -9,7 +9,9 @@
 <div id="header">
   <div id="navbar">
     <ul>
-      <li><a href="index.html">AdventureThingLogo</a></li>
+      <li class="logo"><a href="index.html"><span style="color:#66cc66">ADVENTURE</span>
+        <span style="color:#ff0000">PARK</span>
+        </a></li>
       <li><a href="activities.html">Aktiviteter</a></li>
       <li><a href="booking.html">Book nu</a></li>
       <li><a href="contact.html">Kontakt os</a></li>
