--- a/html/fragments.html
+++ b/html/fragments.html
@@ -12,13 +12,8 @@
 
       <li class="logo"><a href="index.html"><span style="color:#66cc66">ADVENTURE</span>
         <span style="color:#ff0000">PARK</span>
-        </a></li>
-      <li><a href="activities.html">Aktiviteter</a></li>
-
-      <li><a href="index.html">AdventureThingLogo</a></li>
-
-
-
+      </a></li>
+      <li><a href="index.html">Forside</a></li>
       <div class="dropdown">
         <button class="dropbtn">Aktiviteter ▼</button>
         <div class="dropdown-content">
@@ -27,7 +22,6 @@
           <a href="bumperball.html">Bumberball</a>
         </div>
       </div>
-
       <li><a href="booking.html">Book nu</a></li>
       <li><a href="contact.html">Kontakt os</a></li>
     </ul>
