tilføjet embedded maps i contact og kontakt formular

--- a/html/contact.html
+++ b/html/contact.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Aventure Park | Kontakt os </title>
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/contact.css">
+  <link rel="stylesheet" href="../css/main.css">
+
 
 </head>
 <body>
-
-
 <!-- August' header her: -->
 <div id="header" class="header"></div>
 <div id="content">
 
+
   <!-- FIRST ROW -->
+  <img src="../images/BlankVLDL.JPG.webp" class="theFirm"/>
   <div class="row">
     <div class="column">
 
@@ -23,27 +25,21 @@
     </div>
     <div class="column">
       <!-- column til højre -->
-      <h2>Polterabend?!</h2>
+      <h2>Hvem er Adventure Park?</h2>
 
-      <p>Her står noget tekst om hvad vi tilbyder ift polterabends. Kom og skyd din brudgom. <br>
-        Priser: 20000
-        Des flere des mere sparer I!
+      <p>Her står en bio omkring adventure parks hold og hvad de gør<br>
+        evt. nogle mål her eller andet
         <br>
         <br>
         Hvad er der ikke at råbe hurra for?
         <br>
         <br>
       </p>
-
-      <a href="booking.html">
-        <button class="button-50">Book nu</button>
-      </a>
-
+      <button class="button-50">link til at sende en mail</button>
     </div>
   </div>
 
   <!-- måske mere mellemrum ind imellem de to sektioner? -->
-
 
 
   <!-- SECOND ROW -->
@@ -51,30 +47,32 @@
     <div class="column">
 
       <!-- column til højre -->
-      <h2>Team building</h2>
+      <h2>Kontakt information</h2>
 
-      <p>Her står noget tekst om hvad vi tilbyder ift teambuilding. Kom og skyd din chef. <br>
-        Priser: 20000
-        Des flere des mere sparer I!
-        <br>
-        <br>
-        Hvad er der ikke at råbe hurra for?
-        <br>
-        <br>
-      </p>
+      <p>Telefon: 9999999999</p><br>
+      <p>eller skriv til os ved at udfylde formen herunder:</p> <br>
+      <form action="" class="form-group">
+        <div class="form-group">
+          <label for="exampleFormControlInput1"></label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1"></label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
 
-      <a href="booking.html">
-        <button class="button-50">Læs mere</button>
-      </a>
+        <button class="btn-primary">Send</button>
+      </form>
 
     </div>
     <div class="column">
       <!-- column til venstre -->
-      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+      <div class="map-responsive">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2248.849371971967!2d12.55251101603352!3d55.69160650417759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253abae55267d%3A0x7f06e00bd751130a!2sKEA%20K%C3%B8benhavns%20Erhvervsakademi%20-%20Main%20Campus!5e0!3m2!1sda!2sdk!4v1647441052672!5m2!1sda!2sdk"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-
-
-
+      </div>
       <!--  her skal et embedded map til lokation være -->
 
     </div>
