tilføjet gokart og sumo-sider

--- a/html/fragments.html
+++ b/html/fragments.html
@@ -20,6 +20,8 @@
           <a href="paintball.html">Paintball</a>
           <a href="minigolf.html">Minigolf</a>
           <a href="bumperball.html">Bumberball</a>
+          <a href="sumo.html">Sumo</a>
+          <a href="gokart.html">Gokart</a>
         </div>
       </div>
       <li><a href="booking.html">Book nu</a></li>
