billedet passer til minig - uden kæmpe mellemrum

--- a/html/minigolf.html
+++ b/html/minigolf.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Aventure Park | Minigolf </title>
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/activities.css">
 
 
 </head>
@@ -14,7 +14,7 @@
 <!-- fra https://alvarotrigo.com/blog/how-to-create-a-fullscreen-video-with-css-and-html/ -->
 <div class="activities-img">
   <img
-    src="../images/minig.png"/>
+    src="../images/minig2.png"/>
 
 </div>
 <!-- end of video-container-->
