--- a/html/gokart.html
+++ b/html/gokart.html
@@ -2,9 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Aventure Park | Gokart </title>
+  <link rel="stylesheet" href="../css/activities.css">
+
+
 </head>
 <body>
-$END$
+
+
+
+<!-- fra https://alvarotrigo.com/blog/how-to-create-a-fullscreen-video-with-css-and-html/ -->
+<div class="activities-img">
+  <img
+    src="../images/gk.png" class="img-fluid"/>
+
+</div>
+<!-- end of video-container-->
+
+<!-- August' header her: -->
+<div id="header" class="header"></div>
+<div id="content">
+
+  <!-- FIRST ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+    </div>
+    <div class="column">
+      <!-- column til højre -->
+      <h2>Wroom wroom im in my moms car</h2>
+
+      <p>Her står noget tekst om gokart<br>
+        Her står nogle priser
+        Her er noget mere info
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="booking.html">
+        <button class="button-50">Book nu</button>
+      </a>
+
+    </div>
+  </div>
+
+  <!-- måske mere mellemrum ind imellem de to sektioner? -->
+
+
+
+  <!-- SECOND ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til højre -->
+      <h2>Speedy gonzales</h2>
+
+      <p>Her står noget tekst om hvad vi tilbyder ift gokart. Vinderen får en is. <br>
+        Priser: 20000
+        Des flere des mere sparer I!
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="contact.html">
+        <button class="button-50">Find os</button>
+      </a>
+
+    </div>
+    <div class="column">
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+    </div>
+  </div>
+
+
+</div>
+</div>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script src="../js/js.js"></script>
 </body>
 </html>
