--- a/html/bumperball.html
+++ b/html/bumperball.html
@@ -2,19 +2,95 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Aventure Park | Minigolf </title>
-  <link rel="stylesheet" href="../css/index.css">
+  <title>Aventure Park | Bumperball </title>
+  <link rel="stylesheet" href="../css/activities.css">
 
 
 </head>
 <body>
 
+
+
+<!-- fra https://alvarotrigo.com/blog/how-to-create-a-fullscreen-video-with-css-and-html/ -->
+<div class="activities-img">
+  <img
+    src="../images/bp.png"/>
+
+</div>
+<!-- end of video-container-->
+
+<!-- August' header her: -->
 <div id="header" class="header"></div>
 <div id="content">
 
+  <!-- FIRST ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+    </div>
+    <div class="column">
+      <!-- column til højre -->
+      <h2>Fodbold - med ekstra ekstra bolde</h2>
+
+      <p>Her står noget tekst om bumperball<br>
+        Her står nogle priser
+        Her er noget mere info
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="booking.html">
+        <button class="button-50">Book nu</button>
+      </a>
+
+    </div>
+  </div>
+
+  <!-- måske mere mellemrum ind imellem de to sektioner? -->
+
+
+
+  <!-- SECOND ROW -->
+  <div class="row">
+    <div class="column">
+
+      <!-- column til højre -->
+      <h2>Sjov for alle boldtosserne</h2>
+
+      <p>Her står noget tekst om hvad vi tilbyder ift bumperball. Vinderen får ekstra blå mærker. <br>
+        Priser: 20000
+        Des flere des mere sparer I!
+        <br>
+        <br>
+        Hvad er der ikke at råbe hurra for?
+        <br>
+        <br>
+      </p>
+
+      <a href="contact.html">
+        <button class="button-50">Find os</button>
+      </a>
+
+    </div>
+    <div class="column">
+      <!-- column til venstre -->
+      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+
+    </div>
+  </div>
 
 
 </div>
+</div>
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="../js/js.js"></script>
 </body>
