tilføjet billeder til aktiviteterne + fikset header-billederne

--- a/html/gokart.html
+++ b/html/gokart.html
@@ -28,7 +28,7 @@
     <div class="column">
 
       <!-- column til venstre -->
-      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+      <img src="../images/header_gokart-e1424087434508-1024x468.jpg" class="img-fluid"/>
 
     </div>
     <div class="column">
