--- a/html/paintball.html
+++ b/html/paintball.html
@@ -31,7 +31,7 @@
     <div class="column">
 
       <!-- column til venstre -->
-      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+      <img src="../images/pb3.jpg" class="img-fluid"/>
 
     </div>
     <div class="column">
@@ -83,7 +83,7 @@
     </div>
     <div class="column">
       <!-- column til venstre -->
-      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+      <img src="../images/Paintball2.jpg" class="img-fluid"/>
 
     </div>
   </div>
