--- a/html/sumo.html
+++ b/html/sumo.html
@@ -28,7 +28,7 @@
     <div class="column">
 
       <!-- column til venstre -->
-      <img src="https://mdbootstrap.com/img/new/slides/031.jpg" class="img-fluid"/>
+      <img src="../images/Sumo-Wrestling_Players3_960x720.jpg" class="img-fluid"/>
 
     </div>
     <div class="column">
