--- a/html/fragments.html
+++ b/html/fragments.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="../css/main.css">
+  <script src="../js/js.js"></script>
 </head>
 <body>
 <div id="header">
@@ -26,6 +27,18 @@
       <li><a href="contact.html">Kontakt os</a></li>
     </ul>
   </div>
+</div>
+
+
+<div id="footer" class="footer">
+  <div></div>
+  <ul>
+    <li><img src="../images/PRULogo.png" height="118" width="158"/>made by programmers R Us</li>
+    <li><a href="contact.html">Kontakt</a></li>
+    <li>Mail:Something@gmail.com</li>
+    <li>tlf: +4599999999</li>
+    <li>Adresse:Guldbergsgade xx</li>
+  </ul>
 </div>
 
 </body>
