--- a/html/contact.html
+++ b/html/contact.html
@@ -5,6 +5,7 @@
   <title>Aventure Park | Kontakt os </title>
   <link rel="stylesheet" href="../css/contact.css">
   <link rel="stylesheet" href="../css/main.css">
+  <!-- <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css"> -->
 
 
 </head>
@@ -51,6 +52,7 @@
 
       <p>Telefon: 9999999999</p><br>
       <p>eller skriv til os ved at udfylde formen herunder:</p> <br>
+
       <form action="" class="form-group">
         <div class="form-group">
           <label for="exampleFormControlInput1"></label>
