Tilføjet CVR input felt

--- a/html/form.html
+++ b/html/form.html
@@ -52,6 +52,14 @@
         </div>
 
         <div class="col-md-4 mb-3">
+          <label for="cvr">Hvis du booker som firma, indtast CVR nr her:</label>
+          <input type="text" class="form-control" id="cvr" placeholder="CVR nr...">
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
           <label for="koment">Komentar</label>
           <textarea id="koment" name="koment" placeholder="Skriv en kommentar.." style="height:200px"></textarea>
           <div class="valid-feedback">
@@ -59,25 +67,6 @@
           </div>
         </div>
       </div>
-
-
-      <!--
-          <label for="lname">Efternavn</label>
-          <input type="text" id="lname" name="lastname" placeholder="Dit efternavn..">
-
-          <label for="mail">Mail</label>
-          <input type="text" id="mail" name="mail" placeholder="Din mail..">
-
-          <label for="pnum">Mobil</label>
-          <input type="text" id="pnum" name="phonenumber" placeholder="Dit mobil nummer..">
-
-          <label for="address" class="col-md-4 mb-3">Mail</label>
-          <input type="text" id="address" name="address" placeholder="Din adresse..">
-
-
-          <label for="subject">Kommentare</label>
-          <textarea id="subject" name="subject" placeholder="Skriv en kommentar.." style="height:200px"></textarea>
-          -->
 
         <a href="confirmation.html">
           <button class="btn btn-primary">Submit</button>
