--- a/html/booking.html
+++ b/html/booking.html
@@ -13,6 +13,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 <div id="header" class="header"></div>
@@ -36,7 +37,7 @@
     </div>
   </div>
   <!-- Øverste knapper på siden-->
-
+  <button id="btn">Button</button>
   <!-- Aktivitets Boksene og tider-->
   <div class="activity-box">
     <div class="activity-info">
@@ -107,7 +108,11 @@
 
 </div>
 </div>
-<script src="../js/booking.js"></script>
+
+
+
 <script src="../js/js.js"></script>
+<script src="../js/booking.js"></script>
+
 </body>
 </html>
