--- a/html/booking.html
+++ b/html/booking.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Booking</title>
-  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/booking.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
@@ -16,7 +15,9 @@
 
 </head>
 <body>
+<div class="allback-book">
 <div id="header" class="header"></div>
+
 <div id="content">
 
   <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
@@ -106,6 +107,7 @@
 
   <button id="book" class="btn btn-primary"><a href="form.html">Book Valgte</a></button>
 
+  </div>
 </div>
 </div>
 
