headerbillede på minigolf er nu også fluid, så nu følger størrelsen med vinduets størrelse. Det var vist den eneste side det manglede på, men lmk hvis I finder andre tilfælde

--- a/html/minigolf.html
+++ b/html/minigolf.html
@@ -14,7 +14,7 @@
 <!-- fra https://alvarotrigo.com/blog/how-to-create-a-fullscreen-video-with-css-and-html/ -->
 <div class="activities-img">
   <img
-    src="../images/minig2.png"/>
+    src="../images/minig2.png" class="img-fluid"/>
 
 </div>
 <!-- end of video-container-->
