--- a/html/form.html
+++ b/html/form.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Form</title>
+  <link rel="stylesheet" href="../css/booking.css">
   <link rel="stylesheet" href="../css/formstyle.css">
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
-  <link rel="stylesheet" href="../css/booking.css">
   <link rel="stylesheet" href="../css/main.css">
 
 
 </head>
 <body>
+<div class="allback-book">
 <div id="header" class="header"></div>
 
 <div class="container">
@@ -75,6 +76,7 @@
       </form>
     </form>
   </div>
+</div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="../js/js.js"></script>
