baggrundsfarve på confirmation nu også grå

--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+<div class="allback-book">
 <div id="header" class="header"></div>
 
 <div class="jumbotron text-center">
@@ -24,7 +25,7 @@
     <a class="btn btn-primary btn-sm" href="index.html" role="button">Tilbage til forsiden</a>
   </p>
 </div>
-
+</div>
 
 <script src="../js/js.js"></script>
 </body>
