--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,8 @@
   <div class="video-container">
     <video autoplay muted loop poster="cake.jpg">
       <source
-        src="https://cdn.videvo.net/videvo_files/video/free/2019-07/small_watermarked/Raw_Vegan_Blueberry_Cake_Cut_Birthday_Cooking_preview.webm"
-        type="video/webm">
+        src="../videos/paintballvideo.mp4"
+        type="video/mp4">
     </video>
   </div>
   <!-- end of video-container-->
