--- a/html/fragments.html
+++ b/html/fragments.html
@@ -11,9 +11,10 @@
   <div id="navbar">
     <ul>
 
-      <li class="logo"><a href="index.html"><span style="color:#66cc66">ADVENTURE</span>
+      <li class="logo"><a href="index.html"><span style="color:#ffffff">ADVENTURE</span>
         <span style="color:#ff0000">PARK</span>
       </a></li>
+
       <li><a href="index.html">Forside</a></li>
       <div class="dropdown">
         <button class="dropbtn">Aktiviteter ▼</button>
