--- a/html/fragments.html
+++ b/html/fragments.html
@@ -33,7 +33,7 @@
 <div class="filler"></div>
 
 
-<div id="footer" class="footer">
+<!--<div id="footer" class="footer">
   <div></div>
   <ul>
     <li><img src="../images/PRULogo.png" height="118" width="158"/>made by programmers R Us</li>
@@ -42,7 +42,7 @@
     <li>tlf: +4599999999</li>
     <li>Adresse:Guldbergsgade xx</li>
   </ul>
-</div>
+</div>-->
 
 </body>
 </html>
