--- a/html/booking.html
+++ b/html/booking.html
@@ -7,9 +7,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -17,6 +19,22 @@
 <body>
 <div id="header" class="header"></div>
 <div id="content">
+
+  <div id="booking-box">
+    <!--  <button id="pbCreateTimeTable">Vælg Dag</button> -->
+    <div class="col-lg-12" style="margin-top:10px;">
+      <label class="form-group control-label col-lg-2">vælg en dag *</label>
+      <div class="input-group col-lg-6">
+        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+        <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
+               value="" data-date-format="yyyy-mm-dd" readonly><br>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <button id="btn2">Klik her</button>
+  </div>
 
   <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
 
@@ -35,19 +53,11 @@
     </thead>
     <tr></tr>
   </table>
-<!--
 
-  <div id="booking-box">
-    &lt;!&ndash;  <button id="pbCreateTimeTable">Vælg Dag</button> &ndash;&gt;
-    <div class="col-lg-12" style="margin-top:10px;">
-      <label class="form-group control-label col-lg-2">vælg en dag *</label>
-      <div class="input-group col-lg-6">
-        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-        <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
-               value="" data-date-format="yyyy-mm-dd" readonly><br>
-      </div>
-    </div>
-  </div>
+
+
+
+  <!--
   &lt;!&ndash; Øverste knapper på siden&ndash;&gt;
   <button id="btn">Button</button>
   &lt;!&ndash; Aktivitets Boksene og tider&ndash;&gt;
@@ -120,9 +130,9 @@
   <button id="book" class="btn btn-primary"><a href="form.html">Book Valgte</a></button>
 
 </div>
-<script src="../js/fetch_activites.js"></script>
 <script src="../js/js.js"></script>
 <script src="../js/booking.js"></script>
+<script src="../js/fetch_activites.js"></script>
 
 </body>
 </html>
