--- a/html/index.html
+++ b/html/index.html
@@ -4,16 +4,12 @@
   <meta charset="UTF-8">
   <title>Aventure Park | Velkommen </title>
   <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../css/main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="../js/js.js"></script>
+
 
 </head>
 <body>
-
-
-
-
-
 
 <div id="content">
 
@@ -93,8 +89,19 @@
   </div>
 </div>
 
-
-
+<script src="../js/js.js"></script>
 </body>
+
+<footer id="footer">
+  <div id="footerstay">
+    <ul>
+      <li><img src="../images/PRULogo.png" height="118" width="158"/>made by Programmers R Us</li>
+      <li><a href="contact.html">Kontakt</a></li>
+      <li>Mail: Something@gmail.com</li>
+      <li>tlf: +45 42 04 20 69</li>
+      <li>Adresse: Guldbergsgade xx</li>
+    </ul>
+  </div>
+</footer>
 
 </html>
