--- a/html/booking.html
+++ b/html/booking.html
@@ -34,10 +34,7 @@
     </div>
   </div>
 
-  <div>
-    <button id="btn2">Klik her</button>
-  </div>
-
+  <div id="parent"></div>
   <!--Taget fra https://javascript.tutorialink.com/icon-clicking-to-show-the-date/ -->
 
 
