did some css styling of new booking table

--- a/html/booking.html
+++ b/html/booking.html
@@ -19,7 +19,26 @@
 <body>
 <div class="allback-book">
 <div id="header" class="header"></div>
-
+  <div class="bline-div">
+    <table id="bline-table" class="bline-table">
+      <th colspan="3">Booking List</th>
+      <tr>
+        <th>Activity</th>
+        <th>Time</th></tg>
+        <th>Price</th>
+      </tr>
+      <tr>
+        <td>minigold</td>
+        <td>16:00</td>
+        <td>200</td>
+      </tr>
+      <tr>
+        <td>minigold</td>
+        <td>16:00</td>
+        <td>200</td>
+      </tr>
+    </table>
+  </div>
 <div id="content">
 
   <div id="booking-box">
@@ -37,7 +56,6 @@
   <div id="parent"></div>
 
   <button id="book" class="btn btn-primary"><a href="form.html">Book Valgte</a></button>
-
   </div>
 </div>
 <script src="../js/js.js"></script>
