--- a/html/booking.html
+++ b/html/booking.html
@@ -14,7 +14,6 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
 </head>
 <body>
 <div class="allback-book">
@@ -38,6 +37,9 @@
         <td>200</td>
       </tr>
     </table>
+
+    <button id="book" class="btn btn-primary"><a href="form.html">Book Valgte</a></button>
+    <button id="book2" class="btn btn-primary">buuuuton</button>
   </div>
 <div id="content">
 
@@ -55,7 +57,6 @@
 
   <div id="parent"></div>
 
-  <button id="book" class="btn btn-primary"><a href="form.html">Book Valgte</a></button>
   </div>
 </div>
 <script src="../js/js.js"></script>
