some clean up, and also made button work properly

--- a/html/booking.html
+++ b/html/booking.html
@@ -26,20 +26,8 @@
         <th>Time</th></tg>
         <th>Price</th>
       </tr>
-      <tr>
-        <td>minigold</td>
-        <td>16:00</td>
-        <td>200</td>
-      </tr>
-      <tr>
-        <td>minigold</td>
-        <td>16:00</td>
-        <td>200</td>
-      </tr>
     </table>
-
-    <button id="book" class="btn btn-primary"><a href="form.html">Book Valgte</a></button>
-    <button id="book2" class="btn btn-primary">buuuuton</button>
+    <button id="book-button" class="btn btn-primary">Book valgte</button>
   </div>
 <div id="content">
 
