fixed indexsiden. rykkede august' header op og lavede en container til videoenX

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,8 @@
 
 </head>
 <body>
-
+<!-- August' header her: -->
+<div id="header" class="header"></div>
 <div id="content">
 
   <!-- fra https://alvarotrigo.com/blog/how-to-create-a-fullscreen-video-with-css-and-html/ -->
@@ -22,8 +23,9 @@
     </video>
   </div>
   <!-- end of video-container-->
-  <!-- August' header her: -->
-  <div id="header" class="header"></div>
+
+  <div class="act-content">
+
   <!-- FIRST ROW -->
   <div class="row">
     <div class="column">
@@ -88,7 +90,7 @@
 
   </div>
 </div>
-
+</div>
 <script src="../js/js.js"></script>
 </body>
 
