--- a/html/sumo.html
+++ b/html/sumo.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Aventure Park | Sumo </title>
   <link rel="stylesheet" href="../css/activities.css">
+  <link rel="stylesheet" href="../css/main.css">
 
 
 </head>
@@ -97,4 +98,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="../js/js.js"></script>
 </body>
+
+<footer id="footer">
+  <div id="footerstay">
+    <ul>
+      <li><img src="../images/PRULogo.png" height="118" width="158"/>made by Programmers R Us</li>
+      <li><a href="contact.html">Kontakt</a></li>
+      <li>Mail: Something@gmail.com</li>
+      <li>tlf: +45 42 04 20 69</li>
+      <li>Adresse: Guldbergsgade xx</li>
+    </ul>
+  </div>
+</footer>
+
 </html>
