--- a/html/form.html
+++ b/html/form.html
@@ -83,5 +83,21 @@
 <script src="../js/customer.js"></script>
 <script src="../js/booking.js"></script>
 <script src="../bootstrap-5.1.3-dist/js/bootstrap.js"></script>
+
+<footer id="footer">
+  <div id="footerstay">
+    <ul>
+      <li><img src="../images/PRULogo.png" height="118" width="158"/>made by Programmers R Us</li>
+      <li><a href="contact.html">Kontakt</a></li>
+      <li>Mail: Something@gmail.com</li>
+      <li>tlf: +45 42 04 20 69</li>
+      <li>Adresse: Guldbergsgade xx</li>
+    </ul>
+  </div>
+</footer>
+
 </body>
+
+
+
 </html>
