--- a/html/fragments.html
+++ b/html/fragments.html
@@ -17,6 +17,7 @@
       </a></li>
 
       <li><a href="index.html">Forside</a></li>
+      <li><a href="adminpage.html">Admin</a></li>
       <div class="dropdown">
         <button class="dropbtn">Aktiviteter ▼</button>
         <div class="dropdown-content">
