har sat random instruktører på + hentet data ned til admin-siden

--- a/html/booking.html
+++ b/html/booking.html
@@ -38,7 +38,7 @@
       <div class="input-group col-lg-6">
         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
         <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
-               value="" data-date-format="yyyy-mm-dd" readonly><br>
+               value="" data-date-format="YYYY-MM-DD" readonly><br>
       </div>
     </div>
   </div>
