--- a/html/adminpage.html
+++ b/html/adminpage.html
@@ -2,23 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Admin</title>
+  <title>Booking</title>
+  <link rel="stylesheet" href="../css/booking.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
-<div class="bview-div">
-  <table id="bview-table" class="bview-table">
-    <th colspan="3">Booking Overview</th>
-    <tr>
-      <th>Activity</th>
-      <th>Time</th>
-      <th>Customer Phone</th>
-      <th>Booking Id</th>
-      <th>Instructor</th>
-    </tr>
-  </table>
-</div>
+<div class="allback-book">
+  <div id="header" class="header"></div>
 
+  <div id="content">
+
+    <div id="booking-box">
+      <!--  <button id="pbCreateTimeTable">Vælg Dag</button> -->
+      <div class="col-lg-12" style="margin-top:10px;">
+        <label class="form-group control-label col-lg-2">vælg en dag *</label>
+        <div class="input-group col-lg-6">
+          <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+          <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
+                 value="" data-date-format="yyyy-mm-dd" readonly><br>
+        </div>
+      </div>
+    </div>
+
+    <div class="bview-div">
+      <table id="bview-table" class="bview-table">
+        <th colspan="3">Booking Overview</th>
+        <tr>
+          <th>Booking Id</th>
+          <th>Activity</th>
+          <th>Time</th>
+          <th>Customer Phone</th>
+          <th>Instructor</th>
+        </tr>
+      </table>
+    </div>
+
+
+
+  </div>
+</div>
 <script src="../js/admin.js"></script>
+<script src="../js/js.js"></script>
+<script src="../js/booking.js"></script>
+<script src="../js/fetch_activites.js"></script>
+
 </body>
 </html>
