tlf nr skal nu være et nr og mail skal nu indeholde @

--- a/html/form.html
+++ b/html/form.html
@@ -38,7 +38,7 @@
 
         <div class="col-md-4 mb-3">
           <label for="mail">Mail</label>
-          <input type="text" class="form-control" id="mail" name="customerMail" placeholder="Din mail.." required>
+          <input type="email" class="form-control" id="mail" name="customerMail" placeholder="Din mail.." required>
           <div class="valid-feedback">
             Looks good!
           </div>
@@ -46,7 +46,7 @@
 
         <div class="col-md-4 mb-3">
           <label for="pnum">Mobil</label>
-          <input type="text" class="form-control" id="pnum" name="customerPhoneNum" placeholder="Mobil nummer.." required>
+          <input type="number" class="form-control" id="pnum" name="customerPhoneNum" placeholder="Mobil nummer.." required>
           <div class="valid-feedback">
             Looks good!
           </div>
@@ -54,7 +54,7 @@
 
         <div class="col-md-4 mb-3">
           <label for="cvr">Hvis du booker som firma, indtast CVR nr her:</label>
-          <input type="text" class="form-control" id="cvr" name="customerCvrNumber" placeholder="CVR nr...">
+          <input type="number" class="form-control" id="cvr" name="customerCvrNumber" placeholder="CVR nr...">
           <div class="valid-feedback">
             Looks good!
           </div>
