--- a/html/adminpage.html
+++ b/html/adminpage.html
@@ -13,6 +13,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/search.css">
 
 </head>
 <body>
@@ -28,8 +29,10 @@
         <label class="form-group control-label col-lg-2">vælg en dag *</label>
         <div class="input-group col-lg-6">
           <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-          <input style="width: 97.5%;" type="text" class="form-control datepicker" id="document_date" name="document_date"
-                 value="" data-date-format="yyyy-mm-dd" readonly><br>
+          <input type="text" class="form-control datepicker dateinput" id="document_date" name="document_date"
+                 value="" data-date-format="yyyy-mm-dd" readonly>
+          <button class="search-button" id="search-button">Søg</button>
+          <br>
         </div>
       </div>
     </div>
