Its now possible to search for events on dates

--- a/html/adminpage.html
+++ b/html/adminpage.html
@@ -41,6 +41,7 @@
     <div class="bview-div">
       <table id="bview-table" class="bview-table">
         <!--<th colspan="3">Booking Overview</th>-->
+        <thead>
         <tr>
           <th>Booking Id</th>
           <th>Activity</th>
@@ -48,16 +49,16 @@
           <th>Customer Phone</th>
           <th>Instructor</th>
         </tr>
+        </thead>
       </table>
     </div>
     </div>
 
 
 </div>
-<script src="../js/admin.js"></script>
 <script src="../js/js.js"></script>
+<script src="../js/admin.js"></script>
 <script src="../js/booking.js"></script>
-<script src="../js/fetch_activites.js"></script>
 
 </body>
 </html>
