tilføjet delete knap ikke funktionelt

--- a/html/booking.html
+++ b/html/booking.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
+  <script data-main="scripts/main" src="scripts/require.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -20,11 +20,12 @@
 <div id="header" class="header"></div>
   <div class="bline-div">
     <table id="bline-table" class="bline-table">
-      <th colspan="3">Booking List</th>
+      <th colspan="4">Booking List</th>
       <tr>
         <th>Activity</th>
-        <th>Time</th></tg>
+        <th>Time</th>
         <th>Price</th>
+        <th></th>
       </tr>
 
     </table>
@@ -69,6 +70,7 @@
 <script src="../js/js.js"></script>
 <script src="../js/booking.js"></script>
 <script src="../js/fetch_activites.js"></script>
+
 
 </body>
 </html>
