now search for booking by id works..

--- a/html/adminpage.html
+++ b/html/adminpage.html
@@ -30,9 +30,9 @@
         <div class="input-group col-lg-6">
           <input type="date" class="input-search" id="document_date" name="document_date"
                  value="" data-date-format="yyyy-mm-dd">
-          <button class="search-button" id="search-button">Søg</button>
+          <button class="search-button" id="search-button-date">Søg</button>
           <input type="text" class="input-search" id="text-input-search" name="text-input-search" placeholder="Søg på id, telefonnr eller instruktør..">
-          <button class="search-button" id="search-button2">Søg</button>
+          <button class="search-button" id="search-button-input">Søg</button>
           <br>
           <br>
         </div>
